<resources>
    <string name="app_name">FragmentsApp</string>
    <string name="click">Click</string>
    <string name="your_number_is_0">Your number is: 0</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="your_number_is_555_55_55_54">Your number is: 555 55 55 54</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_your_number_here">Enter your number here</string>


</resources>